--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
 
 
-	<link rel="author" href="https://plus.google.com/u/0/100929226180914271171/"/>
-	<link rel="publisher" href="https://plus.google.com/u/0/100929226180914271171/"/>
 	<meta name="description" content="Para usar este gerador de HTML para e-mail marketing, não é necessário programação e nem conhecimento em HTML, mas mesmo para quem conhece, ele otimiza o tempo quando é composto somente por imagens na horizontal, bastando inserir a URL, o Link e o texto Alternativo. Simples, fácil e rápido" />
 	<meta property="og:description" content="Para usar este gerador de HTML para e-mail marketing, não é necessário programação e nem conhecimento em HTML, mas mesmo para quem conhece, ele otimiza o tempo quando é composto somente por imagens na horizontal, bastando inserir a URL, o Link e o texto Alternativo. Simples, fácil e rápido" />
 	<meta property="og:url" content="https://www.gustavosapienza.com.br/gerador-html-email-marketing/" />
@@ -25,8 +23,6 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
-
-
 </head>
 <body>
 
@@ -39,19 +35,14 @@
 
 <section>
 	<div class="center">
-		<span class="como-funciona" style="color:transparent">Como Funciona?</span>
-		<p></p>
-		<div class="youtube">
-			<iframe width="420" height="315" src="https://www.youtube.com/embed/m3P6Z8u8ndA" frameborder="0" allowfullscreen></iframe>
-		</div>
 		<div class="ferramenta">
 			<div class="bloco">
 		        <div class="conteudo-bloco">
 		          <div class="excluir" title="Excluir"></div>
 		          <div class="editor">
-		    				<label><span>Url da imagem*</span><div class="interrogacao" title="O Link online de onde sua imagem está hospedada, exemplo https://www.gustavosapienza.com.br/imagem-teste.png"></div></label>
+		    				<label><span>Url da imagem*</span><div class="interrogacao" title="A URL da sua imagem, exemplo https://www.gustavosapienza.com.br/imagem-teste.png"></div></label>
 		    				<input type="text" class="url"><br>
-		    				<label><span>Link ao clicar na imagem</span><div class="interrogacao" title="O Link da página de onde você quer que o usuário seja direcionado ao clicar, exemplo: https://www.gustavosapienza.com.br/"></div></label>
+		    				<label><span>Link ao clicar na imagem</span><div class="interrogacao" title="URL de destino ao clicar na imagem, exemplo: https://www.gustavosapienza.com.br/"></div></label>
 		    				<input type="text" class="link"><br>
 		    				<label><span>Texto Alternativo</span><div class="interrogacao" title="O texto que será mostrado se a imagem não for carregada"></div></label>
 		    				<input type="text" class="alt"><br>
@@ -70,9 +61,6 @@
 
 <section>
 	<div class="center">
-	<div style="float: right; right: 0px; height: 45px; top: 90px; position: absolute;">
-		<p style="color: #AAAAAA; display: block; float: left; font-size: 13px; margin-top: 22px;">Esta ferramenta te ajudou? Então curta nossa página!</p> <iframe src="//www.facebook.com/plugins/like.php?href=https://www.facebook.com/gustavosapienza&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=368965126451972" scrolling="no" style="margin-left: 10px; margin-top: 20px; width: 150px; float:left;" frameborder="0" allowTransparency="true"></iframe>
-	</div>
 		<div class="propaganda">
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<!-- Gerador 2 -->
@@ -90,7 +78,7 @@
 
 
 <div class="popup">
-        <div class="fechar-grande botao" title="Finalizar"></div>
+        <div class="fechar-grande botao" title="Finalizar">X</div>
 		<div class="popup-visualizacao">
 
 		</div>
